bug:calendar jump menu no longer closes on user click

--- a/src/css/calendar-jump.css
+++ b/src/css/calendar-jump.css
@@ -1,47 +1,53 @@
 #cal-jump-grid {
-    /* spacing */
-    margin-top: 0.125em;
-    padding: 0.5em;
-    line-height: 1.5em;
+  /* visibility */
+  visibility:hidden;
   
-    text-align: center;
-  
-    /* sizing */
-    width: fit-content;
-    height: fit-content;
-  
-    /* shapes */
-    border-radius: 0.25em;
-  
-    /* colors */
-    background-image: var(--cal-jump-grid-background-color);
-    background-color: var(--cal-jump-grid-background-color);
-  }
-  
-  #cal-jump-year {
-    color: var(--cal-jump-grid-font-color);
-  }
-  
-  #cal-jump-arrow {
-    color: var(--cal-jump-arrow-color);  
-  }
+  /* spacing */
+  position: absolute;
+  top: 3.125em;
+  padding: 0.5em;
+  line-height: 1.5em;
 
-  #cal-jump-arrow:hover {
-    cursor: pointer;
-  }
-  
-  #cal-jump-grid-element {
-    /* spacing */
-    margin: 0.5em;
-    padding: 0.25em;
-  
-    /* shapes */
-    border-radius: 0.25em;
-  
-    /* colors */
-    color: var(--cal-jump-grid-font-color);
-  }
-  
-  #cal-jump-grid-element:hover {
-    background-color: var(--cal-jump-grid-hover-color);
-  }
+  /* sizing */
+  width: fit-content;
+  height: fit-content;
+
+  /* shapes */
+  border-radius: 0.25em;
+
+  /* colors */
+  background-image: var(--cal-jump-grid-background-color);
+  background-color: var(--cal-jump-grid-background-color);
+}
+
+#cal-jump-header {
+  text-align: right;
+}
+
+#cal-jump-year {
+  color: var(--cal-jump-grid-font-color);
+}
+
+#cal-jump-arrow {
+  color: var(--cal-jump-arrow-color);
+}
+
+#cal-jump-arrow:hover {
+  cursor: pointer;
+}
+
+#cal-jump-grid-element {
+  /* spacing */
+  margin: 0.5em;
+  padding: 0.25em;
+
+  /* shapes */
+  border-radius: 0.25em;
+
+  /* colors */
+  color: var(--cal-jump-grid-font-color);
+}
+
+#cal-jump-grid-element:hover {
+  background-color: var(--cal-jump-grid-hover-color);
+}
